<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TimeNote</string>
    <string name="homepage">旋转时间</string>
    <string name="see">今天时光</string>
    <string name="see_diary">时间轴</string>
    <string name="about">更多</string>
    <string name="dairy_write">回味生活</string>
    <string name="hint_edittext">记下你的一点点....</string>
    <string name="clear_text">清除</string>
    <string name="save_text">保 存</string>
    <string name="today_title">今天的时光</string>
    <string name="toast">输入标签为空。。。</string>
    <string name="title_1">看一看</string>
    <string name="edit_text">编辑</string>
    <string name="back_text">返回</string>
    <string name="time_note_about">Time Note 是一款专注于帮助用户记录每天时间安排的应用，以更加有趣的手指旋转来记录时间的流逝，以更加直观的饼状图来展示每天的时间的分配
        ，以更加简洁时间轴来查看最近的时间安排，同时可以设置时间提醒，简洁却不简单。
    </string>
    <string name="developer_bout">Time Note 开发团队：来自南邮移动互联网俱乐部的程序，戴志强，王涛；设计，胡雪茜。</string>
    <string name="connection_about">如有bug或要交流，请发送邮件至focinfi@gmail.com</string>
</resources>
