<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@android:id/tabhost"
         tools:context=".MainTabActivity" >
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
        <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1"/>
        <TabWidget
                android:id="@android:id/tabs"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        <RadioGroup
                android:gravity="center_vertical"
                android:layout_gravity="bottom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bottom_bg"
                >
            <RadioButton
                    android:id="@+id/radio_button0"
                    android:layout_marginTop="2dp"
                    android:drawableTop="@drawable/home_page_icon"
                    android:text="@string/homepage"
                    style="@style/main_tab_bottom"/>
            <RadioButton
                    android:id="@+id/radio_button1"
                    android:layout_marginTop="2dp"
                    android:drawableTop="@drawable/today_page_icon"
                    android:text="@string/see"
                    style="@style/main_tab_bottom"/>
            <RadioButton
                    android:id="@+id/radio_button2"
                    android:layout_marginTop="2dp"
                    android:drawableTop="@drawable/diary_page"
                    android:text="@string/see_diary"
                    style="@style/main_tab_bottom"/>
            <RadioButton
                    android:id="@+id/radio_button3"
                    android:layout_marginTop="2dp"
                    android:drawableTop="@drawable/diary_page"
                    android:text="@string/about"
                    style="@style/main_tab_bottom"/>"
        </RadioGroup>
    </LinearLayout>
</TabHost>

