<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
       >
    <LinearLayout
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:background="@android:color/black"
            android:layout_weight="9">
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/back_text"
            />
        <TextView
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/title_1"
                android:layout_weight="4"/>
        <Button
                android:id="@+id/edit"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/edit_text"/>
            </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >
    <ListView
            android:id="@+id/tagdetailListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
        <TextView
                android:id="@+id/diarytextview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                />
            </ScrollView>
        </LinearLayout>


</LinearLayout>