<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_gray"
        >
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bg">
        <Button
                android:id="@+id/writeDiaryBackButton"
                android:background="@drawable/save_btn"
                android:layout_marginLeft="5dp"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:text="返回"
                />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:text="@string/dairy_write"/>
    </RelativeLayout>

    <TextView
            android:id="@+id/writeDiaryTitleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#232323"
            android:gravity="center"
            android:paddingTop="10dp"/>
    <EditText
            android:id="@+id/diaryEditText"
            android:background="@drawable/write_diary_bg"
            android:layout_width="fill_parent"
            android:gravity="top"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#232323"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:hint="@string/hint_edittext"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                />
        <Button
                android:id="@+id/saveNote"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/save_btn"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/save_text"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                />
    </LinearLayout>

</LinearLayout>